# panic-painter

./: .gitignore  PRIVACY.md  README.md
assets/: obstacle-test.json
assets/config/: assets.json  assets_loading.json  global.json
assets/json/: assets.json
assets/levels/: beach-1.json  beach-3.json  city-1.json  city-2.json  city-3.json  city-4.json  city-5.json  e1.json  e2.json  e3.json  e4.json  e5.json  eiffel-1.json  eiffel-2.json  eiffel-3.json  eiffel-4.json  eiffel-5.json  gameplay.json  h1.json  h2.json  h3.json  h4.json  h5.json  house-1.json  house-2.json  house-3.json  house-4.json  house-5.json  island-1.json  island-2.json  island-3.json  island-4.json  island-5.json  level1.json  level2.json  level3.json  m1.json  m2.json  m3.json  m4.json  (+19 more)
assets/music/: LICENSE.md  music1_02.xmp  music1_flac.flac  music1_flac.xmp  test.flac
assets/scenes/: levelselect.json  loading.json  menu.json  menuold.json  pause.json  settings.json  world-city.json  world-museum.json  world-space.json  worldselect.json
assets/sfx/: LICENSE.md
assets/widgets/: textbutton.json
build-android/: build.gradle  keystore.jks  settings.gradle
build-android/app/: build.gradle
build-android/app/jni/source/: Android.mk
build-android/app/src/main/: AndroidManifest.xml
build-android/gradle/wrapper/: gradle-wrapper.properties
build-apple/: README.md
build-apple/HelloWorld.xcodeproj/: project.pbxproj
build-apple/HelloWorld.xcodeproj/xcshareddata/xcschemes/: HelloWorld (Mac).xcscheme  HelloWorld (Sim).xcscheme  HelloWorld (iOS).xcscheme
build-apple/PanicPainter.xcodeproj/: project.pbxproj
build-apple/PanicPainter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build-apple/PanicPainter.xcodeproj/xcshareddata/xcschemes/: PanicPainter (Mac).xcscheme  PanicPainter (Sim).xcscheme  PanicPainter (iOS).xcscheme
build-apple/Resources/: Landscape.storyboard  Mac-Info.plist  Portrait.storyboard  iOS-Info.plist
build-apple/Resources/Mac.xcassets/AppIcon.appiconset/: Contents.json
build-apple/Resources/iOS.xcassets/AppIcon.appiconset/: Contents.json
build-win10/: .gitignore  CMakeLists.txt  HelloWorld.sln  PanicPainter.sln
build-win10/HelloWorld/: HelloWorld.vcxproj  HelloWorld.vcxproj.filters
build-win10/PanicPainter/: PanicPainter.rc  PanicPainter.vcxproj  PanicPainter.vcxproj.filters  resource.h
build-win10/enc_temp_folder/52bc944f31f88b78bad3bf6d4f1f4a6a/: PPLevelSelectScene.cpp
build-win10/enc_temp_folder/c65ef4b249d7eab39a6a7a20a24cfad/: PPSettingsScene.cpp
build-win10/enc_temp_folder/da7da8f939329a81bec9b96597c5a97d/: PPGameScene.cpp
cugl/build-android/jni/: Application.mk
cugl/build-apple/Box2D.xcodeproj/: project.pbxproj
cugl/build-apple/CUGL.xcodeproj/: project.pbxproj
cugl/build-apple/Resources/: iOS-Info.plist
cugl/build-win10/Box2D/: Box2D.sln  Box2D.vcxproj  Box2D.vcxproj.filters  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  Testbed.vcxproj  Testbed.vcxproj.filters  glew.vcxproj  glew.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  imgui.ini  imgui.vcxproj  imgui.vcxproj.filters
cugl/build-win10/CUGL/: CUGL.vcxproj  CUGL.vcxproj.filters
cugl/include/SDL/: SDL_blendmode.h
cugl/include/cugl/: cugl.h
cugl/lib/assets/: CUFontLoader.cpp  CUJsonValue.cpp  CUScene2Loader.cpp  CUSoundLoader.cpp  CUTextureLoader.cpp
cugl/lib/audio/: CUAudioEngine.cpp  CUAudioQueue.cpp  CUAudioSample.cpp
cugl/lib/base/: CUApplication.cpp  CUDisplay.cpp
cugl/lib/input/: CUAccelerometer.cpp
cugl/lib/math/: CUAffine2.cpp  CUColor4.cpp  CUGeometry.cpp  CUMat4.cpp  CUPoly2.cpp  CURect.cpp  CUSpline2.cpp  CUVec2.cpp
cugl/lib/physics2/: CUBoxObstacle.cpp  CUCapsuleObstacle.cpp  CUComplexObstacle.cpp  CUObstacle.cpp  CUObstacleSelector.cpp  CUObstacleWorld.cpp  CUPolygonObstacle.cpp  CUSimpleObstacle.cpp  CUWheelObstacle.cpp
cugl/lib/render/: CUCamera.cpp  CUFont.cpp  CUGradient.cpp  CUScissor.cpp  CUShader.cpp  CUSpriteBatch.cpp
cugl/lib/scene2/: CUScene2.cpp  CUScene2Texture.cpp
cugl/lib/util/: CUStrings.cpp
source/: HelloApp.cpp  HelloApp.h  PPApp.cpp  PPApp.h  PPCanvas.cpp  PPCanvas.h  PPCanvasBlock.cpp  PPCanvasBlock.h  PPColorStrip.cpp  PPColorStrip.h  PPGameScene.cpp  PPGameScene.h  PPGameState.cpp  PPGameState.h  PPGlobalConfig.cpp  PPGlobalConfig.h  PPLoadingScene.cpp  PPLoadingScene.h  main.cpp
source/controllers/: PPActionController.cpp  PPActionController.h  PPGameState.cpp  PPGameState.h  PPGameStateController.cpp  PPGameStateController.h  PPGlobalConfig.cpp  PPGlobalConfig.h  PPGlobalConfigController.cpp  PPGlobalConfigController.h  PPInput.cpp  PPInput.h  PPInputController.cpp  PPInputController.h  PPSaveController.cpp  PPSaveController.h  PPSoundController.cpp  PPSoundController.h
source/models/: PPGameState.cpp  PPGameState.h
source/render/: PPPaintBatch.cpp  PPPaintBatch.h  PPPaintVertex.h  SplatShader.frag  SplatShader.vert
source/scenes/gameplay/: PPCanvas.cpp  PPCanvas.h  PPCanvasBlock.cpp  PPCanvasBlock.h  PPColorCircle.cpp  PPColorCircle.h  PPColorPalette.cpp  PPColorPalette.h  PPColorPaletteView.cpp  PPColorPaletteView.h  PPColorStrip.cpp  PPColorStrip.h  PPDangerBar.cpp  PPDangerBar.h  PPFeedback.cpp  PPFeedback.h  PPGameScene.cpp  PPGameScene.h  PPGlobalTimer.cpp  PPGlobalTimer.h  PPHealthPotion.cpp  PPHealthPotion.h  PPLevelComplete.cpp  PPLevelComplete.h  PPSplashEffect.cpp  PPSplashEffect.h  PPSplashNode.h  PPSplat.h  PPSplatNode.cpp  PPSplatNode.h  PPTopOfScreen.cpp  PPTopOfScreen.h
source/scenes/level/: PPLevelSelectScene.cpp  PPLevelSelectScene.h  PPWorldSelectScene.cpp  PPWorldSelectScene.h
source/scenes/loading/: PPLoadingScene.cpp  PPLoadingScene.h
source/scenes/menu/: PPMenuScene.cpp  PPMenuScene.h
source/scenes/pause/: PPPauseScene.cpp  PPPauseScene.h
source/scenes/settings/: PPCreditsScene.cpp  PPCreditsScene.h  PPSettingsScene.cpp  PPSettingsScene.h
source/scenes/transition/: PPTransition.cpp  PPTransition.h
source/utils/: PPAnimation.cpp  PPAnimation.h  PPAssets.cpp  PPAssets.h  PPHeader.h  PPPaintBatch.cpp  PPRandom.cpp  PPRandom.h  PPTimer.cpp  PPTimer.h  PPTypeDefs.h
(+139 files in other folders)
